--- a/docs/includes/docs.html
+++ b/docs/includes/docs.html
@@ -1,3 +1,7 @@
+<!-- THIS IS A PLACEHOLDER for the real ontology docs that are generated in CI.
+     DO NOT EDIT! This won't be visible in the final docs anyway.
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,15 +12,6 @@ EAfDe6H3Dy6Ll456WEJsRZS630MwCAOI20ei5OBpxse5zcBZw8eS4uPpfIuDiCainIg9umBCU0GZzgLZ
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     
     <style>/* Replacement styles for PyLODE docs so that they look good in mkdocs pages */
-
-/*#pylode {*/
-/*    position: fixed;*/
-/*    top: 130px;*/
-/*    left: -60px;*/
-/*    font-size: small;*/
-/*    transform: rotate(-90deg);*/
-/*    color: grey;*/
-/*}*/
 
 #pylode a {
     font-size: 1.8em;
@@ -105,11 +100,6 @@ h6 {
     font: small-caps 100% sans-serif
 }
 
-
-body {
-    /*text-align: justify;*/
-}
-
 .figure {
     margin-bottom: 20px;
 }
@@ -172,7 +162,8 @@ code {
 .proplink {
     color: #336;
     text-decoration: none;
-}</style>
+}
+</style>
     
     <script type="application/ld+json">
       [
@@ -214,33 +205,12 @@ code {
         <dt><a class="proplink" href="https://www.dublincore.org/specifications/dublin-core/dcmi-terms/#http://purl.org/dc/terms/creator">Creator</a>(s)</dt>
         <dd>
             
-    <a href="https://orcid.org/0000-0002-2543-9461">Piotr Sowiński</a>
-    <a href="">
-  <svg width="15px" height="15px" viewBox="0 0 72 72" version="1.1"
-    xmlns="http://www.w3.org/2000/svg"
-    xmlns:xlink="http://www.w3.org/1999/xlink">
-    <title>Orcid logo</title>
-    <g id="Symbols" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-        <g id="hero" transform="translate(-924.000000, -72.000000)" fill-rule="nonzero">
-            <g id="Group-4">
-                <g id="vector_iD_icon" transform="translate(924.000000, 72.000000)">
-                    <path d="M72,36 C72,55.884375 55.884375,72 36,72 C16.115625,72 0,55.884375 0,36 C0,16.115625 16.115625,0 36,0 C55.884375,0 72,16.115625 72,36 Z" id="Path" fill="#A6CE39"></path>
-                    <g id="Group" transform="translate(18.868966, 12.910345)" fill="#FFFFFF">
-                        <polygon id="Path" points="5.03734929 39.1250878 0.695429861 39.1250878 0.695429861 9.14431787 5.03734929 9.14431787 5.03734929 22.6930505 5.03734929 39.1250878"></polygon>
-                        <path d="M11.409257,9.14431787 L23.1380784,9.14431787 C34.303014,9.14431787 39.2088191,17.0664074 39.2088191,24.1486995 C39.2088191,31.846843 33.1470485,39.1530811 23.1944669,39.1530811 L11.409257,39.1530811 L11.409257,9.14431787 Z M15.7511765,35.2620194 L22.6587756,35.2620194 C32.49858,35.2620194 34.7541226,27.8438084 34.7541226,24.1486995 C34.7541226,18.1301509 30.8915059,13.0353795 22.4332213,13.0353795 L15.7511765,13.0353795 L15.7511765,35.2620194 Z" id="Shape"></path>
-                        <path d="M5.71401206,2.90182329 C5.71401206,4.441452 4.44526937,5.72914146 2.86638958,5.72914146 C1.28750978,5.72914146 0.0187670918,4.441452 0.0187670918,2.90182329 C0.0187670918,1.33420133 1.28750978,0.0745051096 2.86638958,0.0745051096 C4.44526937,0.0745051096 5.71401206,1.36219458 5.71401206,2.90182329 Z" id="Path"></path>
-                    </g>
-                </g>
-            </g>
-        </g>
-    </g>
-  </svg>
-</a><br/>
+    <a href="https://github.com/Ostrzyciel">Piotr Sowiński</a><br/>
         </dd>
         <dt><a class="proplink" href="https://www.dublincore.org/specifications/dublin-core/dcmi-terms/#http://purl.org/dc/terms/created">Created</a></dt>
-        <dd>2024-10-22T00:00:00</dd>
+        <dd>2023-10-22T00:00:00</dd>
         <dt><a class="proplink" href="https://www.dublincore.org/specifications/dublin-core/dcmi-terms/#http://purl.org/dc/terms/issued">Issued</a></dt>
-        <dd>2023-10-23T08:05:59</dd>
+        <dd>2023-10-23T09:18:17</dd>
         <dt>Version Information</dt>
         <dd>0.0.1</dd>
         <dt>Version URI</dt>
@@ -311,9 +281,9 @@ code {
             <tr>
                 <th>Members</th>
                 <td>
-                    <a href="https://w3id.org/stax/ontology#groupedRdfStream">stax:groupedRdfStream</a><br/>
-                    <a href="https://w3id.org/stax/ontology#flatRdfStream">stax:flatRdfStream</a><br/>
                     <a href="https://w3id.org/stax/ontology#rdfStream">stax:rdfStream</a><br/>
+                    <a href="https://w3id.org/stax/ontology#flatRdfStream">stax:flatRdfStream</a><br/>
+                    <a href="https://w3id.org/stax/ontology#groupedRdfStream">stax:groupedRdfStream</a><br/>
                 </td>
             </tr>
         </table>
@@ -349,8 +319,8 @@ code {
             <tr>
                 <th>In domain of</th>
                 <td>
-                    <a href="#haselementtype">has element type</a><sup class="sup-op" title="object property">op</sup><br/>
                     <a href="#canbegroupedinto">can be grouped into</a><sup class="sup-op" title="object property">op</sup><br/>
+                    <a href="#haselementtype">has element type</a><sup class="sup-op" title="object property">op</sup><br/>
                     <a href="#isinstreamtypesemanticrelationwith">is in stream type semantic relation with</a><sup class="sup-op" title="object property">op</sup><br/>
                     <a href="#canbeflattenedinto">can be flattened into</a><sup class="sup-op" title="object property">op</sup><br/>
                 </td>
@@ -359,21 +329,21 @@ code {
                 <th>In range of</th>
                 <td>
                     <a href="#usesstreamtype">uses stream type</a><sup class="sup-op" title="object property">op</sup><br/>
-                    <a href="#canbegroupedinto">can be grouped into</a><sup class="sup-op" title="object property">op</sup><br/>
                     <a href="#isinstreamtypesemanticrelationwith">is in stream type semantic relation with</a><sup class="sup-op" title="object property">op</sup><br/>
                     <a href="#canbeflattenedinto">can be flattened into</a><sup class="sup-op" title="object property">op</sup><br/>
+                    <a href="#canbegroupedinto">can be grouped into</a><sup class="sup-op" title="object property">op</sup><br/>
                 </td>
             </tr>
             <tr>
                 <th>Members</th>
                 <td>
-                    <a href="https://w3id.org/stax/ontology#flatRdfQuadStream">stax:flatRdfQuadStream</a><br/>
-                    <a href="https://w3id.org/stax/ontology#rdfNamedGraphStream">stax:rdfNamedGraphStream</a><br/>
                     <a href="https://w3id.org/stax/ontology#rdfGraphStream">stax:rdfGraphStream</a><br/>
-                    <a href="https://w3id.org/stax/ontology#flatRdfTripleStream">stax:flatRdfTripleStream</a><br/>
                     <a href="https://w3id.org/stax/ontology#rdfDatasetStream">stax:rdfDatasetStream</a><br/>
-                    <a href="https://w3id.org/stax/ontology#timestampedRdfNamedGraphStream">stax:timestampedRdfNamedGraphStream</a><br/>
+                    <a href="https://w3id.org/stax/ontology#flatRdfTripleStream">stax:flatRdfTripleStream</a><br/>
+                    <a href="https://w3id.org/stax/ontology#flatRdfQuadStream">stax:flatRdfQuadStream</a><br/>
                     <a href="https://w3id.org/stax/ontology#rdfSubjectGraphStream">stax:rdfSubjectGraphStream</a><br/>
+                    <a href="https://w3id.org/stax/ontology#timestampedRdfNamedGraphStream">stax:timestampedRdfNamedGraphStream</a><br/>
+                    <a href="https://w3id.org/stax/ontology#rdfNamedGraphStream">stax:rdfNamedGraphStream</a><br/>
                 </td>
             </tr>
         </table>
@@ -403,9 +373,9 @@ code {
             <tr>
                 <th>Members</th>
                 <td>
+                    <a href="https://w3id.org/stax/ontology#quad">stax:quad</a><br/>
                     <a href="https://w3id.org/stax/ontology#graph">stax:graph</a><br/>
                     <a href="https://w3id.org/stax/ontology#triple">stax:triple</a><br/>
-                    <a href="https://w3id.org/stax/ontology#quad">stax:quad</a><br/>
                     <a href="https://w3id.org/stax/ontology#dataset">stax:dataset</a><br/>
                 </td>
             </tr>
@@ -468,8 +438,8 @@ code {
             <tr>
                 <th>In domain of</th>
                 <td>
-                    <a href="#usedin">used in</a><sup class="sup-op" title="object property">op</sup><br/>
                     <a href="#usesstreamtype">uses stream type</a><sup class="sup-op" title="object property">op</sup><br/>
+                    <a href="#usedin">used in</a><sup class="sup-op" title="object property">op</sup><br/>
                 </td>
             </tr>
             <tr>
@@ -846,8 +816,8 @@ code {
             </tr>
             <dt>Class(es)</dt>
             <dd>
-                <a href="http://www.w3.org/2004/02/skos/core#ConceptScheme">skos:ConceptScheme</a><br/>
                 <a href="http://www.w3.org/2002/07/owl#Ontology">owl:Ontology</a><br/>
+                <a href="http://www.w3.org/2004/02/skos/core#ConceptScheme">skos:ConceptScheme</a><br/>
             </dd>
             <tr>
                 <th>Description</th>
