--- a/docs/includes/docs.html
+++ b/docs/includes/docs.html
@@ -1,7 +1,3 @@
-<!-- THIS IS A PLACEHOLDER for the real ontology docs that are generated in CI.
-     DO NOT EDIT! This won't be visible in the final docs anyway.
--->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -74,7 +70,10 @@ ul.hlist li {
 }
 
 section#overview img {
-    max-width: 1000px;
+    width: 100%;
+    margin: auto;
+    max-width: 550px;
+    display: block;
 }
 
 dd {
@@ -205,7 +204,28 @@ code {
         <dt><a class="proplink" href="https://www.dublincore.org/specifications/dublin-core/dcmi-terms/#http://purl.org/dc/terms/creator">Creator</a>(s)</dt>
         <dd>
             
-    <a href="https://github.com/Ostrzyciel">Piotr Sowiński</a><br/>
+    <a href="https://orcid.org/0000-0002-2543-9461">Piotr Sowiński</a>
+    <a href="">
+  <svg width="15px" height="15px" viewBox="0 0 72 72" version="1.1"
+    xmlns="http://www.w3.org/2000/svg"
+    xmlns:xlink="http://www.w3.org/1999/xlink">
+    <title>Orcid logo</title>
+    <g id="Symbols" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+        <g id="hero" transform="translate(-924.000000, -72.000000)" fill-rule="nonzero">
+            <g id="Group-4">
+                <g id="vector_iD_icon" transform="translate(924.000000, 72.000000)">
+                    <path d="M72,36 C72,55.884375 55.884375,72 36,72 C16.115625,72 0,55.884375 0,36 C0,16.115625 16.115625,0 36,0 C55.884375,0 72,16.115625 72,36 Z" id="Path" fill="#A6CE39"></path>
+                    <g id="Group" transform="translate(18.868966, 12.910345)" fill="#FFFFFF">
+                        <polygon id="Path" points="5.03734929 39.1250878 0.695429861 39.1250878 0.695429861 9.14431787 5.03734929 9.14431787 5.03734929 22.6930505 5.03734929 39.1250878"></polygon>
+                        <path d="M11.409257,9.14431787 L23.1380784,9.14431787 C34.303014,9.14431787 39.2088191,17.0664074 39.2088191,24.1486995 C39.2088191,31.846843 33.1470485,39.1530811 23.1944669,39.1530811 L11.409257,39.1530811 L11.409257,9.14431787 Z M15.7511765,35.2620194 L22.6587756,35.2620194 C32.49858,35.2620194 34.7541226,27.8438084 34.7541226,24.1486995 C34.7541226,18.1301509 30.8915059,13.0353795 22.4332213,13.0353795 L15.7511765,13.0353795 L15.7511765,35.2620194 Z" id="Shape"></path>
+                        <path d="M5.71401206,2.90182329 C5.71401206,4.441452 4.44526937,5.72914146 2.86638958,5.72914146 C1.28750978,5.72914146 0.0187670918,4.441452 0.0187670918,2.90182329 C0.0187670918,1.33420133 1.28750978,0.0745051096 2.86638958,0.0745051096 C4.44526937,0.0745051096 5.71401206,1.36219458 5.71401206,2.90182329 Z" id="Path"></path>
+                    </g>
+                </g>
+            </g>
+        </g>
+    </g>
+  </svg>
+</a><br/>
         </dd>
         <dt><a class="proplink" href="https://www.dublincore.org/specifications/dublin-core/dcmi-terms/#http://purl.org/dc/terms/created">Created</a></dt>
         <dd>2023-10-22T00:00:00</dd>
@@ -243,7 +263,7 @@ code {
 <section id="overview">
     <h2>Overview</h2>
     <div class="figure">
-        <div style="width:500px; height:50px; background-color: lightgrey; border:solid 2px grey; padding:10px;margin-bottom:5px; text-align:center;">Pictures say 1,000 words</div>
+        <img src="/assets/ontology.png" alt="Ontology diagram" >
         <div class="caption"><strong>Figure 1:</strong> Ontology overview</div>
     </div>
 </section>
@@ -281,9 +301,9 @@ code {
             <tr>
                 <th>Members</th>
                 <td>
+                    <a href="https://w3id.org/stax/ontology#groupedRdfStream">stax:groupedRdfStream</a><br/>
                     <a href="https://w3id.org/stax/ontology#rdfStream">stax:rdfStream</a><br/>
                     <a href="https://w3id.org/stax/ontology#flatRdfStream">stax:flatRdfStream</a><br/>
-                    <a href="https://w3id.org/stax/ontology#groupedRdfStream">stax:groupedRdfStream</a><br/>
                 </td>
             </tr>
         </table>
@@ -321,8 +341,8 @@ code {
                 <td>
                     <a href="#canbegroupedinto">can be grouped into</a><sup class="sup-op" title="object property">op</sup><br/>
                     <a href="#haselementtype">has element type</a><sup class="sup-op" title="object property">op</sup><br/>
-                    <a href="#isinstreamtypesemanticrelationwith">is in stream type semantic relation with</a><sup class="sup-op" title="object property">op</sup><br/>
                     <a href="#canbeflattenedinto">can be flattened into</a><sup class="sup-op" title="object property">op</sup><br/>
+                    <a href="#isinstreamtypesemanticrelationwith">is in stream type semantic relation with</a><sup class="sup-op" title="object property">op</sup><br/>
                 </td>
             </tr>
             <tr>
@@ -337,13 +357,13 @@ code {
             <tr>
                 <th>Members</th>
                 <td>
-                    <a href="https://w3id.org/stax/ontology#rdfGraphStream">stax:rdfGraphStream</a><br/>
-                    <a href="https://w3id.org/stax/ontology#rdfDatasetStream">stax:rdfDatasetStream</a><br/>
-                    <a href="https://w3id.org/stax/ontology#flatRdfTripleStream">stax:flatRdfTripleStream</a><br/>
                     <a href="https://w3id.org/stax/ontology#flatRdfQuadStream">stax:flatRdfQuadStream</a><br/>
-                    <a href="https://w3id.org/stax/ontology#rdfSubjectGraphStream">stax:rdfSubjectGraphStream</a><br/>
+                    <a href="https://w3id.org/stax/ontology#rdfGraphStream">stax:rdfGraphStream</a><br/>
                     <a href="https://w3id.org/stax/ontology#timestampedRdfNamedGraphStream">stax:timestampedRdfNamedGraphStream</a><br/>
+                    <a href="https://w3id.org/stax/ontology#rdfSubjectGraphStream">stax:rdfSubjectGraphStream</a><br/>
+                    <a href="https://w3id.org/stax/ontology#rdfDatasetStream">stax:rdfDatasetStream</a><br/>
                     <a href="https://w3id.org/stax/ontology#rdfNamedGraphStream">stax:rdfNamedGraphStream</a><br/>
+                    <a href="https://w3id.org/stax/ontology#flatRdfTripleStream">stax:flatRdfTripleStream</a><br/>
                 </td>
             </tr>
         </table>
@@ -373,10 +393,10 @@ code {
             <tr>
                 <th>Members</th>
                 <td>
-                    <a href="https://w3id.org/stax/ontology#quad">stax:quad</a><br/>
-                    <a href="https://w3id.org/stax/ontology#graph">stax:graph</a><br/>
                     <a href="https://w3id.org/stax/ontology#triple">stax:triple</a><br/>
+                    <a href="https://w3id.org/stax/ontology#quad">stax:quad</a><br/>
                     <a href="https://w3id.org/stax/ontology#dataset">stax:dataset</a><br/>
+                    <a href="https://w3id.org/stax/ontology#graph">stax:graph</a><br/>
                 </td>
             </tr>
         </table>
@@ -406,8 +426,8 @@ code {
             <tr>
                 <th>Sub-classes</th>
                 <td>
-                    <a href="#AbstractRDFstreamtype">Abstract RDF stream type</a><sup class="sup-c" title="class">c</sup><br/>
                     <a href="#ConcreteRDFstreamtype">Concrete RDF stream type</a><sup class="sup-c" title="class">c</sup><br/>
+                    <a href="#AbstractRDFstreamtype">Abstract RDF stream type</a><sup class="sup-c" title="class">c</sup><br/>
                 </td>
             </tr>
         </table>
@@ -816,8 +836,8 @@ code {
             </tr>
             <dt>Class(es)</dt>
             <dd>
-                <a href="http://www.w3.org/2002/07/owl#Ontology">owl:Ontology</a><br/>
                 <a href="http://www.w3.org/2004/02/skos/core#ConceptScheme">skos:ConceptScheme</a><br/>
+                <a href="http://www.w3.org/2002/07/owl#Ontology">owl:Ontology</a><br/>
             </dd>
             <tr>
                 <th>Description</th>
